--- a/djangoTutorial/mysite/templates/admin/base_site.html
+++ b/djangoTutorial/mysite/templates/admin/base_site.html
@@ -1,9 +1,9 @@
-{% extends "admin/base.html" %}
+{% extends "admin/base_site.html" %}
 
 {% block title %}{% if subtitle %}{{ subtitle }} | {% endif %}{{ title }} | {{ site_title|default:_('Django site admin') }}{% endblock %}
 
 {% block branding %}
-<div id="site-name"><a href="{% url 'admin:index' %}">{{ site_header|default:_('Marcyniuk Administración') }}</a></div>
+<div id="site-name"><a href="{% url 'admin:index' %}">Marcyniuk Administración</a></div>
 {% if user.is_anonymous %}
   {% include "admin/color_theme_toggle.html" %}
 {% endif %}
