--- a/djangoTutorial/mysite/polls/templates/polls/index.html
+++ b/djangoTutorial/mysite/polls/templates/polls/index.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<link rel="stylesheet" href="{% static 'polls/style.css' %}">
+<link rel="stylesheet" href="{% static 'polls/styles.css' %}">
 
 {% if latest_question_list %}
     <ul>
